<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="button_true">Правда</string>
    <string name="button_false">Ложь</string>
    <string name="button_next">Далее</string>
    <string name="button_finish">Результаты</string>
    <string name="button_help">Подсказка</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="correct_toast">Верно 😁</string>
    <string name="incorrect_toast">Неверно 😢</string>
    <string name="warning">Вы уверены?</string>
    <string name="cheat_is_wrong">Жульничать плохо</string>
</resources>